fix css section mobile

--- a/styles-global.css
+++ b/styles-global.css
@@ -305,4 +305,7 @@ body {
   .toggle-icon {
     color: #000000 !important;
   }
+  .section {
+    padding: 24px 0;
+  }
 }
